[Kernel][Eideal][IMX8MM]Enable usbotg2 and set mode as host

--- a/arch/arm64/boot/dts/freescale/eideal-imx8mm.dtsi
+++ b/arch/arm64/boot/dts/freescale/eideal-imx8mm.dtsi
@@ -745,6 +745,11 @@
 	};
 };
 
+&usbotg2 {
+	dr_mode = "host";
+	status = "okay";
+};
+
 &usdhc2 {
 	assigned-clocks = <&clk IMX8MM_CLK_USDHC2>;
 	assigned-clock-rates = <200000000>;
