[DISPLAY]Support lontium 9211c MIPI to LVDS bridge
    Porting driver to support lontium 9211c MIPI to LVDS bridge.

    1. MIPI settings: BURST mode, continous clock, RGB888, lane=4.
    2. Default resolution=1920x1080, 60fps.
    3. Disable Front porch/Back porch/HSA for workaround of PCR unstable.
    4. Change RGB line pattern to BRG:
	1. DRM pixel format is 'DRM_FORMAT_XRGB8888'.
	2. Display color is invalid and is not 'RGB', should be 'BRG'.
	3. Refer to LCDIF Control Register and lcdif driver to change
	   from 'RGB' to 'BRG'.
	Reference:
	i.MX 8M Mini Applications Processor Reference Manual#
	Section#13.3.4.3 LCDIF General Control2 Register (LCDIF_CTRL2n)
	Source code:
	drivers/gpu/imx/lcdif/lcdif-common.c#lcdif_set_pix_fmt()
	CTRL2_ODD_LINE_PATTERN=0x04
	CTRL2_EVEN_LINE_PATTERN=0x04

--- a/arch/arm64/boot/dts/freescale/Makefile
+++ b/arch/arm64/boot/dts/freescale/Makefile
@@ -96,7 +96,7 @@ dtb-$(CONFIG_ARCH_MXC) += imx8mm-icore-mx8mm-ctouch2.dtb
 dtb-$(CONFIG_ARCH_MXC) += imx8mm-icore-mx8mm-edimm2.2.dtb
 dtb-$(CONFIG_ARCH_MXC) += imx8mm-nitrogen-r2.dtb
 
-dtb-$(CONFIG_ARCH_MXC) += eideal-imx8mm.dtbi \
+dtb-$(CONFIG_ARCH_MXC) += eideal-imx8mm.dtb \
 			  eideal-imx8mm-lt9611.dtb
 
 dtb-$(CONFIG_ARCH_MXC) += imx8mn-bsh-smm-s2.dtb
