--- a/drivers/gpu/drm/bridge/Kconfig
+++ b/drivers/gpu/drm/bridge/Kconfig
@@ -117,6 +117,20 @@ config DRM_LONTIUM_LT9211
 	  chip.
 	  Please say Y if you have such hardware.
 
+config DRM_LONTIUM_LT9211C_EIDEAL
+        tristate "Lontium LT9211C DSI/LVDS bridge for Eideal IMX8MM"
+        select SND_SOC_HDMI_CODEC if SND_SOC
+        depends on OF
+        select DRM_PANEL_BRIDGE
+        select DRM_KMS_HELPER
+        select DRM_MIPI_DSI
+        select REGMAP_I2C
+        help
+          Driver for Lontium LT9211C DSI to LVDS bridge
+          chip driver on Eideal IMX8MM that converts
+          dual DSI and I2S to LVDS signals
+          Please say Y if you have such hardware.
+
 config DRM_LONTIUM_LT9611
 	tristate "Lontium LT9611 DSI/HDMI bridge"
 	select SND_SOC_HDMI_CODEC if SND_SOC
