[KERNEL][PWM][BACKLIGHT]Enable eideal-8mm PWM backlight 1. Enable 'backlight'. 2. Enable 'pwm1' which is source of backlight. 3. Example to control backlight: - Set brightness=200: echo 200 > /sys/class/backlight/backlight/brightness
- Check max brightness:
cat /sys/class/backlight/backlight/max_brightness

--- a/arch/arm64/boot/dts/freescale/eideal-imx8mm.dtsi
+++ b/arch/arm64/boot/dts/freescale/eideal-imx8mm.dtsi
@@ -92,6 +92,7 @@
 		brightness-levels = <0 255>;
 		num-interpolated-steps = <255>;
 		default-brightness-level = <250>;
+		status = "okay";
 	};
 
 	ir-receiver {
@@ -695,6 +696,7 @@
 &pwm1 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_backlight>;
+	status = "okay";
 };
 
 &gpu {
